src/objects/Internal_Orders__c.object
<CustomObject>
    <description>Detailed Internal Orders</description>
    <fields>
        <fullName>AWO_Case_No_D__c</fullName>
        <description>This fields shows the EXPECTED AWO-case number. This fields is created from the Order number on ALL Atlantis sales, which means that it can be created from sales not entered in AWO.</description>
        <formula>IF(AND(BEGINS(Product_Group_1__c, &quot;ID2&quot;) ,NOT( ISNULL( Order_Number__c ) )) , MID( Order_Number__c , 4,  LEN( Order_Number__c ) -3) , NULL)</formula>
        <inlineHelpText>This fields shows the EXPECTED AWO-case number. This fields is created from the Order number on ALL Atlantis sales, which means that it can be created from sales not entered in AWO.</inlineHelpText>
        <label>AWO Case No</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AWO_Link__c</fullName>
        <description>Opens the Order in AWO</description>
        <formula>IF( ISNUMBER( Our_Reference__c ), HYPERLINK(&quot;https://www.atlantisweborder.com/orders/show/&quot;&amp; Our_Reference__c,   AWO_Case_No_D__c  ), NULL)</formula>
        <inlineHelpText>Opens the Order in AWO</inlineHelpText>
        <label>AWO-Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Account_No__c</fullName>
        <label>ERP Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Internal Orders</relationshipLabel>
        <relationshipName>InternalOrders</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Article_Description_OLD__c</fullName>
        <label>Article Description OLD</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Article__c</fullName>
        <formula>Name  &amp; &quot; &quot;  &amp;  Article_Description_OLD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Article (SKU)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Atlantis_Interface_D__c</fullName>
        <description>This field shows Attr 4 (Implant type) for the Atlantis abutment</description>
        <inlineHelpText>This field shows Attr 4 (Implant type) for the Atlantis abutment</inlineHelpText>
        <label>Atlantis Interface</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Atlantis_Scanner_Brand_D__c</fullName>
        <description>This field is integrated with Atlantis Attrb 5 (Scanner ID)</description>
        <inlineHelpText>This field is integrated with Atlantis Attrb 5 (Scanner ID)</inlineHelpText>
        <label>Scanner Brand</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <formula>Product__r.Brand__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Brand</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Area_Code__c</fullName>
        <formula>Product__r.Business_Area_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Area Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Code__c</fullName>
        <description>This field is integrated from Movex field &apos;Campaign Code&apos; (Stat.1.Code). In Movex, a value is set on the Invoice level, which means that all invoice lines/ Sales history records with the corresponding invoice number always contain this code.</description>
        <inlineHelpText>If this field contains information the sales comes from a specific campaign or congress like EAO.</inlineHelpText>
        <label>Campaign Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_code__c</fullName>
        <formula>Text(Account__r.Country__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Order_Number__c</fullName>
        <description>This is the customer&apos; order number.</description>
        <inlineHelpText>This is the customer&apos; order number.</inlineHelpText>
        <label>Customer Order Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount_Model__c</fullName>
        <label>Discount Model</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Free_Prod__c</fullName>
        <formula>IF (Price__c  = 0 , &quot;Free Prod&quot;, &quot;Invoiced&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Free Prod</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GDWUniqueKey__c</fullName>
        <externalId>true</externalId>
        <label>GDW Unique Key</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Implant_system__c</fullName>
        <label>Implant Manufacturer</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internal_Order_for_analysis_only__c</fullName>
        <description>For analysis only, should not appear in any page layouts or search criterias if you are not a System administrator. The number 1 should appear if the order type is marked as an internal order type, else 0</description>
        <formula>IF(AND
( OR
  (CONTAINS
   ( Order_Type__c, &quot;7&quot;
   ),CONTAINS
   ( Order_Type__c, &quot;8&quot;
   ),CONTAINS
   ( Order_Type__c, &quot;9&quot;
   ),CONTAINS
   ( Order_Type__c, &quot;F&quot;
   ),CONTAINS
   ( Order_Type__c, &quot;P&quot;
   ),CONTAINS
   ( Order_Type__c, &quot;Q&quot;
   ),CONTAINS
   ( Order_Type__c, &quot;R&quot;
   ),CONTAINS
   ( Order_Type__c, &quot;S&quot;
   ),CONTAINS
   ( Order_Type__c, &quot;T&quot;
   ),CONTAINS
   ( Order_Type__c, &quot;SQZ&quot;
   ),CONTAINS
   ( Order_Type__c, &quot;SQG&quot;
   )
  ),  

NOT
  ( OR
   ( CONTAINS
    (Order_Type__c, &quot;0&quot;
    ),CONTAINS
    (Order_Type__c, &quot;1&quot;
    ),CONTAINS
    (Order_Type__c, &quot;2&quot;
    ),CONTAINS
    (Order_Type__c, &quot;3&quot;
    ),CONTAINS
    (Order_Type__c, &quot;4&quot;
    )
   )
  ) 
,OR(Order_Type__c=&quot;AUR&quot;,Order_Type__c=&quot;ES8&quot;,Order_Type__c=&quot;ES9&quot;,Order_Type__c=&quot;ESR&quot;,Order_Type__c=&quot;GB7&quot;,Order_Type__c=&quot;GB9&quot;,Order_Type__c=&quot;GBR&quot;,Order_Type__c=&quot;GBT&quot;,Order_Type__c=&quot;NL7&quot;,Order_Type__c=&quot;NL8&quot;,Order_Type__c=&quot;NLR&quot;,Order_Type__c=&quot;NO8&quot;,Order_Type__c=&quot;NO9&quot;,Order_Type__c=&quot;NOS&quot;,Order_Type__c=&quot;NOT&quot;,Order_Type__c=&quot;PL7&quot;,Order_Type__c=&quot;PLR&quot;,Order_Type__c=&quot;PLS&quot;,Order_Type__c=&quot;PT8&quot;,Order_Type__c=&quot;SE7&quot;,Order_Type__c=&quot;SE8&quot;,Order_Type__c=&quot;SE9&quot;,Order_Type__c=&quot;SER&quot;,Order_Type__c=&quot;US7&quot;)),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>For analysis only, should not appear in any page layouts or search criterias if you are not a System administrator. The number 1 should appear if the order type is marked as an internal order type, else 0</inlineHelpText>
        <label>Internal Order? (for analysis only)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Invoice_Date_1Y__c</fullName>
        <description>The invoice date plus one year. Used for comparision of YTD and LYTD sales figures. For analysis only</description>
        <formula>Invoice_Date__c +365</formula>
        <inlineHelpText>The invoice date plus one year. Used for comparision of YTD and LYTD sales figures. For analysis only</inlineHelpText>
        <label>Invoice Date +1Y</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Date__c</fullName>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Month__c</fullName>
        <formula>IF ((MONTH ( Invoice_Date__c  ) = 1 ) , &quot;01 Jan&quot;,
IF ((MONTH ( Invoice_Date__c  ) = 2 ) , &quot;02 Feb&quot;,
IF ((MONTH ( Invoice_Date__c  ) = 3 ) , &quot;03 Mar&quot;,
IF ((MONTH ( Invoice_Date__c  ) = 4 ) , &quot;04 Apr&quot;,
IF ((MONTH ( Invoice_Date__c  ) = 5 ) , &quot;05 May&quot;,
IF ((MONTH ( Invoice_Date__c  ) = 6 ) , &quot;06 Jun&quot;,
IF ((MONTH ( Invoice_Date__c  ) = 7 ) , &quot;07 Jul&quot;,
IF ((MONTH ( Invoice_Date__c  ) = 8 ) , &quot;08 Aug&quot;,
IF ((MONTH ( Invoice_Date__c  ) = 9 ) , &quot;09 Sep&quot;,
IF ((MONTH ( Invoice_Date__c  ) = 10 ) , &quot;10 Oct&quot;,
IF ((MONTH ( Invoice_Date__c  ) = 11 ) , &quot;11 Nov&quot;,
IF ((MONTH ( Invoice_Date__c  ) = 12 ) , &quot;12 Dec&quot;, &quot; &quot;))))))))))))</formula>
        <label>Invoice Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Number__c</fullName>
        <label>Invoice Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Year__c</fullName>
        <description>The Year when the Invoice is placed. For analysis</description>
        <formula>TEXT(YEAR( Invoice_Date__c ))</formula>
        <inlineHelpText>The Year when the Invoice is placed. For analysis</inlineHelpText>
        <label>Invoice Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lab_based_Scanning__c</fullName>
        <formula>IF ( CONTAINS(Name, &quot;S&quot;), &quot;Yes&quot;, IF(LEFT(Product_Group_OLD__c, 2)=&quot;ID2&quot;, &quot;No&quot;,&quot;&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Atlantis™ Lab-based scanning</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lot_Number__c</fullName>
        <label>Lot Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Moving_Annual_Total__c</fullName>
        <formula>If (AND( (Invoice_Date__c +365) &gt; TODAY(), Invoice_Date__c &lt;=TODAY()), &quot;True&quot;, &quot;False&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Moving Annual Total</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>My_Sales__c</fullName>
        <description>If this field shows a &quot;YES&quot; = My sales, otherwise &quot;NO&quot;. Use this field for filtering and to simulate &quot;My sales&quot; on reports and views</description>
        <formula>IF( Sales_Owner__c  =  $User.Id , &quot;YES&quot;, &quot;NO&quot;)</formula>
        <inlineHelpText>If this field shows a &quot;YES&quot; = My sales, otherwise &quot;NO&quot;. Use this field for filtering and to simulate &quot;My sales&quot; on reports and views</inlineHelpText>
        <label>Is My Sales?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_longer_exist_in_BPW__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to be used to identify fields that no longer exist in BPW and therefore should be deleted from SFDC.</description>
        <inlineHelpText>Field to be used to identify fields that no longer exist in BPW and therefore should be deleted from SFDC.</inlineHelpText>
        <label>No longer exist in BPW (HQ)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order_Number__c</fullName>
        <description>This is the Astra Tech order number that this row corresponds to. Note that it is not until the article has been invoiced that the sales history record appears in Salesforce.</description>
        <inlineHelpText>This is the Astra Tech order number that this row corresponds to. Note that it is not until the article has been invoiced that the sales history record appears in Salesforce.</inlineHelpText>
        <label>Order Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Type_Description__c</fullName>
        <label>Order Type Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Type__c</fullName>
        <description>Shows the Order Type</description>
        <inlineHelpText>Shows the Order Type</inlineHelpText>
        <label>Order Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Our_Reference__c</fullName>
        <description>Our Reference on the Order/Invoice. Comes from the field OREF in Movex</description>
        <inlineHelpText>Our Reference on the Order/Invoice. Comes from the field OREF in Movex</inlineHelpText>
        <label>Our Reference</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payer_Movex_D_JP__c</fullName>
        <description>Showing the Paying Accounts #.</description>
        <inlineHelpText>Showing the Paying Accounts #.</inlineHelpText>
        <label>Payer ERP # (JP)</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payer_Name_D_JP__c</fullName>
        <description>Showing the name of the Paying Account.</description>
        <inlineHelpText>Showing the name of the Paying Account.</inlineHelpText>
        <label>Payer Name (JP)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postal_Code_D_NA__c</fullName>
        <description>The postal code of the clinic from where the lab sales is originating. Only used for Dental lab sales</description>
        <inlineHelpText>The postal code of the clinic from where the lab sales is originating.</inlineHelpText>
        <label>Postal Code</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prd_Grp_2_Article__c</fullName>
        <formula>Product_Group_2__c  &amp; &quot; / &quot; &amp;  Name</formula>
        <label>Prd Grp 2 Article</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price_List_Code_D_JP__c</fullName>
        <description>Field used in JP to know what price list category was used. Field Price List Description(D-JP) shows the corresponding desciption. Brought over from Movex. 
J1 = Direct Sales 
J4= SASAKI 
J5= Other Dealer 
J6= Other Dealer 
J7= Other Dealer 
J8= Other Dealer 
J9= Other Dealer 
JA= Other Dealer</description>
        <label>Price List Code (JP)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price_List_Description_D_JP__c</fullName>
        <description>Field set by a field update based on field Price List Code. Used in JP only.</description>
        <label>Price List Description (JP)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Direct Sales</fullName>
                </value>
                <value>
                    <fullName>SASAKI</fullName>
                </value>
                <value>
                    <fullName>Other Dealer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>14</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Category__c</fullName>
        <formula>Product__r.Product_Category__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_GPP__c</fullName>
        <formula>Product__r.GPP_Code__c + &quot; &quot; + Product__r.GPP_Desc__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product GPP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Group_1__c</fullName>
        <formula>Product__r.PG1_Code__c &amp;&quot; &quot;&amp; Product__r.PG1_Desc__c</formula>
        <label>Product Group 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Group_2__c</fullName>
        <formula>Product__r.PG2_Code__c &amp;&quot; &quot;&amp; Product__r.PG2_Desc__c</formula>
        <label>Product Group 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Group_3__c</fullName>
        <formula>Product__r.PG3_Code__c&amp;&quot; &quot;&amp;Product__r.PG3_Desc__c</formula>
        <label>Product Group 3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Group_HQ__c</fullName>
        <description>Used only for formulas and RUS fields, avoid using it in reports</description>
        <label>Product Group 4 Code (HQ)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Group_OLD__c</fullName>
        <formula>Null</formula>
        <label>Product Group 4 OLD</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Line__c</fullName>
        <formula>Product__r.Product_Line__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Line</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_SBU__c</fullName>
        <formula>Product__r.SBU_Code__c &amp;&quot; &quot;&amp;Product__r.SBU_Name__c</formula>
        <label>SBU Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A lookup field to Product object , we use SFDC ID to update this field</description>
        <label>Product Name</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Internal Orders</relationshipLabel>
        <relationshipName>InternalOrders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Record_Transfered_to_Another_Account__c</fullName>
        <description>This fields is for checking Data Quality. If this field = &quot;1&quot;, it means that the Movex# doesn&apos;t corresponds and that the sales has been moved to another account (possibly through a merge). This gives errors in the integration.</description>
        <formula>IF( Account_Account_No__c  &lt;&gt;  Account__r.Movex__c , 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This fields is for checking Data Quality. If this field = &quot;1&quot;, it means that the Movex# doesn&apos;t corresponds and that the sales has been moved to another account (possibly through a merge). This gives errors in the integration.</inlineHelpText>
        <label>Record Transfered to Another Account?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Remake_For_analysis_only__c</fullName>
        <description>Returns Quantity if this is Invoice line is a Remake or else 0. Used only for Atlantis sales</description>
        <formula>IF( AND(CONTAINS( Name , &quot;R&quot;), LEFT( Product_SBU__c , 2)=&quot;ID2&quot; ) ,   Quantity__c , 0)</formula>
        <inlineHelpText>Returns Quantity if this is Invoice line is a Remake or else 0. Used only for Atlantis sales. Used for analysis</inlineHelpText>
        <label>Remake? (For analysis only)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_History_External_ID__c</fullName>
        <description>Used to get a unique reference number. Based on Invoicenumber(XXXXXX)+Invoice line (YYYY) = XXXXXXYYY. Used for Upserts, should not be visible</description>
        <externalId>true</externalId>
        <inlineHelpText>Used to get a unique reference number. Based on Invoicenumber(XXXXXX)+Invoice line (YYYY) = XXXXXXYYY. Used for Upserts, should not be visible</inlineHelpText>
        <label>Sales History External ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Sales_Owner_Salesman_ID_HQ__c</fullName>
        <description>Used for verification. Should not appear on any screens</description>
        <inlineHelpText>Used for verification. Should not appear on any screens</inlineHelpText>
        <label>Sales Owner Salesman ID (HQ)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Person who should get credit for the sale. Note that if this individual can not be tracked in Salesforce, the owner of the Account will be set as Sales Owner</description>
        <inlineHelpText>The Person who should get credit for the sale. Note that if this individual can not be tracked in Salesforce, the owner of the Account will be set as Sales Owner</inlineHelpText>
        <label>Sales Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>InternalOrders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tot_Price__c</fullName>
        <formula>IF( Quantity__c =0,  Price__c , Price__c *  Quantity__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Price (Currency)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Value__c</fullName>
        <description>Total value is a numerice field that is the equivalent to the currency field Total Price. It is used to track local currency or multiple currencies in reports. Should not appear in any page layouts</description>
        <formula>Tot_Price__c</formula>
        <inlineHelpText>Total value is a numerice field that is the equivalent to the currency field Total Price. It is used to track local currency or multiple currencies in reports. Should not appear in any page layouts</inlineHelpText>
        <label>Total Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Warranty_For_analysis_only__c</fullName>
        <description>Returns Quantity if this is Invoice line is a Warranty or else 0. Used only for Atlantis sales</description>
        <formula>IF( AND(CONTAINS( Name , &quot;W&quot;), LEFT( Product_SBU__c , 2)=&quot;ID2&quot; ) ,   Quantity__c  , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Returns Quantity if this is Invoice line is a Warranty or else 0. Used only for Atlantis sales. For analysis</inlineHelpText>
        <label>Warranty? (For analysis only)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YTDperiod__c</fullName>
        <description>This field gets the value YTD(YEAR) - i.e YTD(2009) when the invoice line is within the YTD period. Otherwise it is blank. 
It is used to compare multiple YTD periods with each other. 
If this field is used in the filter criteria like this: &quot;YTD Period not equal to blank&quot; it means that you are comparing YTD figures.
This field should not appear in any page layouts</description>
        <formula>IF( TODAY() -  Invoice_Date__c   &lt; 0, &quot;Error&quot;,  /* Invoice date appears in the future */
    IF( YEAR( Invoice_Date__c ) =   YEAR( TODAY() ) , TRIM(&quot; YTD (&quot; &amp;  TEXT(YEAR( Invoice_Date__c ))  &amp; &quot;)&quot;), /*Invoice date appears this year within the YTD scope */
       IF( AND(MOD(YEAR( TODAY() ),YEAR( Invoice_Date__c ))  &gt;=  1,((MONTH(TODAY())-1)/12)*365+DAY(TODAY()) &gt;= ((MONTH( Invoice_Date__c )-1)/12)*365+DAY( Invoice_Date__c )) 

 



 , TRIM(&quot; YTD (&quot; &amp; TEXT(YEAR( Invoice_Date__c ))  &amp; &quot;)&quot;), /*Invoice date appears in previous year within the YTD scope */

&quot;&quot;) ) ) /*Invoice date appears outside of the YTD scope */</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field gets the value YTD(YEAR) - i.e YTD(2009) when the invoice line is withing the YTD period. Otherwise it is blank. 
It is used to compare multiple YTD periods with each other.</inlineHelpText>
        <label>YTD period</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>YrMonth__c</fullName>
        <label>YrMonth</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Internal Order</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Article_Description_OLD__c</columns>
        <columns>Invoice_Date__c</columns>
        <columns>Invoice_Number__c</columns>
        <columns>Quantity__c</columns>
        <columns>Price__c</columns>
        <columns>Account__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Order_Type__c</columns>
        <columns>Order_Type_Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Article (SKU)</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Internal Orders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>